# ModAi

./: AnalysisService.kt  AnalyzeScreen.kt  AndroidManifest.xml  BootReceiver.kt  BuildScreen.kt  CMakeLists.txt  DynamicAnalyzer.kt  MainActivity.kt  MetacognitiveEngine.kt  ModBuilder.kt  Modules.kt  R2FridaBridge.kt  R2GhidraBridge.kt  Theme.kt  app-build.gradle.kts  build.gradle.kts  build_requirements.sh  file_paths.xml  frida-memory_hacks.js  gradle-libs.versions.toml  gradle.properties  license_bypass.js  local.properties  native_bridge.cpp  proguard-rules.pro  settings.gradle.kts  strings.xml  themes.xml  tools-AndroidReTools.kt  ui-MainApp.kt
.github/workflows/: android-build.yml  android2.yml  build-debug.yml  build-release-full.yml  main-build.yml  main.yml  mainfull.yml
